--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -4,14 +4,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:orientation="horizontal">
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="40">
+            android:layout_weight="20">
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
@@ -21,13 +20,17 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="60">
+            android:layout_weight="80">
 
+            <TextView
+                android:id="@+id/contact_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-
+            <TextView
+                android:id="@+id/contact_number"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
-
-
-
     </LinearLayout>
 </RelativeLayout>
