--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -4,7 +4,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:orientation="horizontal">
         <LinearLayout
             android:orientation="vertical"
@@ -25,12 +25,12 @@
             <TextView
                 android:id="@+id/contact_name"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="40dp" />
 
             <TextView
                 android:id="@+id/contact_number"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="40dp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
